--- a/dashboard.html
+++ b/dashboard.html
@@ -103,7 +103,7 @@
     <section class="dash" id="dash" aria-live="polite">
       <!-- Remplacez l’URL ci-dessous par votre lien “Publish to web” -->
       <iframe id="pbi" title="Dashboard Power BI" allowfullscreen="true"
-        src="https://app.powerbi.com/groups/me/reports/4e5b0d49-28d8-405a-a677-11b69d19b527/fa874c42d10e87bd71a8?experience=power-bi">
+        src="<iframe title="BL_WIP" width="1024" height="804" src="https://app.powerbi.com/view?r=eyJrIjoiMzZmYWYxNzgtNmRiZS00MDc2LWJmZjEtNzhhYTY4ZDNmY2RlIiwidCI6ImNhZTdkMDYxLTA4ZjMtNDBkZC04MGMzLTNjMGI4ODg5MjI0YSIsImMiOjh9" frameborder="0" allowFullScreen="true"></iframe>">
       </iframe>
     </section>
 
