--- a/dashboard.html
+++ b/dashboard.html
@@ -102,7 +102,7 @@
 
     <section class="dash" id="dash" aria-live="polite">
       <!-- Remplacez l’URL ci-dessous par votre lien “Publish to web” -->
-      <iframe id="pbi" title="Dashboard Power BI" allowfullscreen="true"
+      <iframe id="pbi" title="Dashboard Pilotage Backlog ACSL" allowfullscreen="true"
         src="<iframe title="BL_WIP" width="1024" height="804" src="https://app.powerbi.com/view?r=eyJrIjoiMzZmYWYxNzgtNmRiZS00MDc2LWJmZjEtNzhhYTY4ZDNmY2RlIiwidCI6ImNhZTdkMDYxLTA4ZjMtNDBkZC04MGMzLTNjMGI4ODg5MjI0YSIsImMiOjh9" frameborder="0" allowFullScreen="true"></iframe>">
       </iframe>
     </section>
